# pan

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  agents.md  configure_pipeline_railway.sh  package.json  railway.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: .env.example  .prettierignore  CLAUDE.md  README.md  convex.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  vitest.config.ts
app/convex/: agentAdmin.ts  auth.config.ts  bugReports.ts  bugReportsAction.ts  crons.ts  demo.ts  farmerObservations.ts  farms.ts  geocoding.ts  grazingAgentDirect.ts  grazingAgentGateway.ts  grazingAgentTools.ts  http.ts  intelligence.ts  intelligenceActions.ts  internal.ts  livestock.ts  ndviGrid.ts  noGrazeZones.ts  notifications.ts  (+13 more)
docs/: ARCHITECTURE_MIGRATION_PLAN.md  PHASE_1_QUICK_TEST.md  PHASE_1_VERIFICATION_PLAN.md  architecture.md  domain.md  grazing-agent-implementation.md  phase-2-satellite-poc.md  phasing.md  ui-components.md
scripts/: railway-api.sh  verify_phase1.sh
src/ingestion/: .env.example  Dockerfile  cloud_mask.py  composite.py  compute_ndvi.py  config.py  imagery_checker.py  nixpacks.toml  observation_types.py  package-lock.json  pipeline.py  pyproject.toml  query_sentinel2.py  refresh_tile_urls.py  requirements.txt  sample_data.py  scheduler.py  visualize_ndvi.py  writer.py  zonal_stats.py
src/ingestion/providers/: __init__.py  copernicus.py  planet_scope.py  sentinel2.py
src/ingestion/storage/: __init__.py  r2.py
(+401 files in other folders)
