[project]
name = "pan-satellite"
version = "0.1.0"
description = "Satellite data ingestion for Grazing Intelligence"

[project.dependencies]
pystac-client = ">=0.7.2"
odc-stac = ">=0.3.0"
rasterio = ">=1.3.0"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
planetary-computer = ">=0.5.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
